# PlanHol

./: .gitignore  LICENSE  PlanHol.cabal  README.md  stack.yaml  tmp.txt
Doc/: Goal.txt
Doc/ALPHA2/: PlanLexer.txt  PlanParser.txt
Example/: Prelude.hol  Prelude.lp  SystemF.hol  SystemF.lp  einstein.hol  stlc.hol
src/: Main.hs
src/ALPHA1/: Ast.hs  Grammar.hs  Lexer.txt  Main.hs  Rendering.hs  TermNode.hs
src/ALPHA2/: Analyzer.hs  Ast.hs  Compiler.hs  Desugarer.hs  Grammar.hs  HOPU.hs  Header.hs  Main.hs  PlanHolLexer.hs  PlanHolParser.hs  Runtime.hs  TermNode.hs  TypeChecker.hs
src/ALPHA3/: Main.hs
src/HOL/: Ast.hs  Grammar.hs  Lexer.txt  Main.hs  Parser.txt  Rendering.hs  TermNode.hs
src/HOL/Back/: TermNode.hs
src/HOL/Front/: Ast.hs  Grammar.hs
src/Hol/: Main.hs
src/Hol/BEnd/: Term.hs  Unique.hs
src/Hol/Front/: Ast.hs  Grammar.hs
src/LGS/: Alpha1.hs  Main.hs
src/PGS/: Alpha1.hs  LALR.hs  Main.hs  Make.hs  Util.hs
src/TEST/: Eval.hs  HOPU.hs  HOPU1.hs  HOPU2.hs  Hopu.hs  Presburger.hs  Term.hs  Term1.hs  Term2.hs  Term3.hs  Term4.hs
src/Z/: Algorithms.hs  Doc.hs  OldPC.hs  PC.hs  System.hs  Utils.hs
src/Z/Algo/: Function.hs
