name: PlanHol
version: 0.1.0
synopsis: A Programming Language with Higher-Order Logic
build-type: Simple
cabal-version: 2.0

executable main
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -O0
  build-depends: base, containers, transformers, pretty-terminal
  default-extensions:
    DeriveFunctor
  other-modules:
    HOL.Ast
    HOL.Grammar
    HOL.Main
    HOL.TermNode
    LGS.Main
    PGS.Main
    TEST.HOPU
    TEST.Presburger
    TEST.Term1
    TEST.Term2
    TEST.Term3
    Z.Algorithms
    Z.PC
    Z.Utils
