name: PlanHol
version: 0.0.2
synopsis: A Programming Language with Higher-Order Logic
build-type: Simple
cabal-version: 2.0

executable main
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -O3
  build-depends: base, containers, transformers, pretty-terminal, directory
  other-modules:
    ALPHA1.Ast
    ALPHA1.Grammar
    ALPHA1.Main
    ALPHA1.Rendering
    ALPHA1.TermNode
    LGS.Main
    PGS.Main
    TEST.HOPU1
    TEST.HOPU2
    TEST.Presburger
    TEST.Term1
    TEST.Term2
    TEST.Term3
    TEST.Term4
    Z.Algorithms
    Z.Doc
    Z.PC
    Z.Utils
