name: PlanHol
version: 0.0.2
synopsis: A Programming Language with Higher-Order Logic
build-type: Simple
cabal-version: 2.0

executable main
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -O3
  build-depends: base, containers, transformers, pretty-terminal, directory
  other-modules:
    ALPHA1.Ast
    ALPHA1.Grammar
    ALPHA1.Main
    ALPHA1.Rendering
    ALPHA1.TermNode
    ALPHA2.Header
    ALPHA2.PlanHolLexer
    ALPHA2.PlanHolParser
    ALPHA2.Constant
    ALPHA2.Desugarer
    ALPHA2.TypeChecker
    ALPHA2.TermNode
    ALPHA2.HOPU
    ALPHA2.Runtime
    ALPHA2.Compiler
    ALPHA2.Main
    LGS.Main
    PGS.Main
    PGS.LALR
    PGS.Util
    TEST.HOPU1
    TEST.HOPU2
    TEST.Presburger
    TEST.Term1
    TEST.Term2
    TEST.Term3
    TEST.Term4
    Z.Algorithms
    Z.Doc
    Z.PC
    Z.System
    Z.Utils
